# Rust-project

./: README.md
KiCad files/: proect.kicad_sch
my_rust_project/: Cargo.toml
my_rust_project/Smart_Guard/: Cargo.toml
my_rust_project/Smart_Guard/src/: main.rs
