[package]
name = "bec_try"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m ="0.7.6"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.3"
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-40960"] }
embassy-rp = { version = "0.1.0",  package = "embassy-rp", features = ["time-driver", "critical-section-impl"] }
embassy-usb-logger = {version = "0.1.0", package = "embassy-usb-logger"}
embassy-time ={version = "0.3.0", package = "embassy-time"}
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
embassy-usb = {version = "0.1.0", package = "embassy-usb"}
embassy-futures = {version = "0.1.1", package = "embassy-futures"}
embassy-sync = { version = "0.5.0", package = "embassy-sync"}
eeprom24x = "0.7.0"
lcd-lcm1602-i2c = "0.1.0"
rp2040-hal = "0.2.0"
ufmt = "=0.1.2"
ufmt-write = "=0.1.0"
log = "0.4"